[gd_scene load_steps=6 format=3 uid="uid://c67rvw4cy36in"]

[ext_resource type="Script" uid="uid://c818xg4aneh5a" path="res://minijeux/restart-windows95/restart_windows95.gd" id="1_r8gdb"]
[ext_resource type="Texture2D" uid="uid://blbfhe7kasuso" path="res://minijeux/restart-windows95/ordinateur.webp" id="2_5asav"]
[ext_resource type="Texture2D" uid="uid://w42pinbubutg" path="res://minijeux/restart-windows95/win95.png" id="3_neua4"]
[ext_resource type="Texture2D" uid="uid://pu0v7cp3awfc" path="res://minijeux/restart-windows95/start-menu.png" id="4_ojadi"]
[ext_resource type="Texture2D" uid="uid://b5qurhooji8gr" path="res://minijeux/restart-windows95/restart.png" id="5_sc7ep"]

[node name="DidYouTryToTurnItOffAndOnAgain" type="Node2D"]
script = ExtResource("1_r8gdb")

[node name="Ordinateur" type="Sprite2D" parent="."]
position = Vector2(616, 263)
scale = Vector2(2.7302084, 2.659259)
texture = ExtResource("2_5asav")

[node name="Win95Panel" type="Panel" parent="Ordinateur"]
offset_left = -124.16634
offset_top = -26.32312
offset_right = -20.511261
offset_bottom = 46.62954

[node name="Win95" type="Sprite2D" parent="Ordinateur/Win95Panel"]
position = Vector2(48.714226, 36.85237)
scale = Vector2(0.36627236, 0.3760446)
texture = ExtResource("3_neua4")

[node name="StartButton" type="Button" parent="Ordinateur/Win95Panel"]
layout_mode = 0
offset_left = -4.7615433
offset_top = 67.31199
offset_right = 11.7206955
offset_bottom = 79.34541

[node name="StartMenu" type="Sprite2D" parent="Ordinateur/Win95Panel"]
position = Vector2(14.284622, 54.15042)
scale = Vector2(0.13699447, 0.11996214)
texture = ExtResource("4_ojadi")

[node name="PowerOffButton" type="Button" parent="Ordinateur/Win95Panel/StartMenu"]
offset_left = -72.18797
offset_top = 81.50207
offset_right = 80.20888
offset_bottom = 119.1184

[node name="Restart" type="Sprite2D" parent="Ordinateur"]
visible = false
position = Vector2(-76.7684, 8.978063)
scale = Vector2(0.16002922, 0.19439992)
texture = ExtResource("5_sc7ep")

[connection signal="gui_input" from="Ordinateur/Win95Panel" to="." method="_on_win_95_panel_gui_input"]
[connection signal="pressed" from="Ordinateur/Win95Panel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Ordinateur/Win95Panel/StartMenu/PowerOffButton" to="." method="_on_power_off_button_pressed"]
